Bug 533691 - Revamp of IENUMFE. r=roc.